@@ -1,5 +1,6 @@
 NEXT
  - Support previous versions of config files with url params
+ - Add get_people method
 
 1.0101
  - Normalise url and site_url to just url
